--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 /* fonts style */
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster&family=Poppins:wght@400;500&family=Roboto&family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster&family=Open+Sans:wght@600&family=Poppins:wght@400;500&family=Roboto&family=Roboto+Condensed&display=swap');
+
 
 /* body common style or utilities */
 body {
@@ -9,13 +10,17 @@ body {
 
 main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .conteiner {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 22px;
+    border-radius: 7px;
 }
 
 /* top players styles */
@@ -52,4 +57,161 @@ main {
 
 hr {
     border: 1px solid #D1D1D1;
+}
+
+/* --------------
+   top blog style 
+   -------------- */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+
+.blog {
+    display: flex;
+    margin-left: 20px;
+}
+
+.bg {
+    box-shadow: -4px 4px 5px #b9b6b6;
+    border-radius: 10px;
+}
+
+.blog .bg img {
+    width: 177px;
+    height: 117px;
+}
+
+.bg-1 {
+    margin-left: 16px;
+}
+
+.bg-title {
+    font-size: 20px;
+}
+
+.blog-a {
+    font-size: 16px;
+    color: #9F9F9F;
+}
+
+.blog-a a {
+    color: #562EFF;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+/* ------------------ 
+  course style 
+-------------------- */
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course {
+    box-shadow: 4px 4px 10px #9F9F9F;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.c-img img {
+    width: 224px;
+    height: 104px;
+}
+
+.c-title {
+    font-size: 20.0336px;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.course-p {
+    color: #ED6B4F;
+    font-size: 14.6913px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.icon {
+    color: #FFC014;
+}
+
+.fa-star.icon-gary {
+
+    color: #AEAEAE;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.clo {
+    background: #FEE5DF;
+    border-radius: 14.6913px;
+    width: 94.83px;
+
+}
+
+.fa-clock.clo-1 {
+    color: #FF4A60;
+    margin-left: 10px;
+}
+
+/* --------
+Media Query
+----------- */
+/* phone devices */
+@media screen and (max-width:688px) {
+    .conteiner {
+        width: 100%;
+        /* background-color: rgb(83, 216, 216); */
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blog {
+        flex-direction: column;
+    }
+
+    .course {
+        margin-top: 15px;
+    }
+}
+
+/* tablet devices */
+@media screen and (min-width:688px) and (max-width:992px) {
+    .conteiner {
+        width: 100%;
+    }
+
+    .players,
+    .courses {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player {
+        justify-content: center;
+    }
+
+    .course {
+        margin-top: 15px;
+    }
 }
